--- a/styles.css
+++ b/styles.css
@@ -11,4 +11,17 @@ body{
 .quiz-container{
     background-color: #fff;
     border-radius: 10px;
+    box-shadow: 0 0 10px 2px rgba(100, 100, 100, 0.1);
+    width: 600px;
+    overflow: hidden;
+}
+
+.quiz-header{
+    padding: 4rem;
+}
+
+h2{
+    padding: 1rem;
+    text-align: center;
+    margin: 0;
 }
