--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 body{
     background-color: #b8c6db;
+    font-family: sans-serif;
+    background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7f7 100%);
     display: flex;
     align-items: center;
     justify-content: center;
